first attempt on petitions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="articles__list">
           <li class="articles__item">
             <input class="item__checkbox" type="checkbox">
-            <span class="item__counter">1</span>
+            <input class="item__counter" type="number">
             <div class="item__descrition">
               <h4 class="item__description--title">Artículo</h4>
               <p class="item__description--brand">Marca</p>
@@ -34,7 +34,7 @@
           </li>
           <li class="articles__item">
             <input class="item__checkbox" type="checkbox">
-            <span class="item__counter">1</span>
+            <input class="item__counter" type="number">
             <div class="item__descrition">
               <h4 class="item__description--title">Artículo</h4>
               <p class="item__description--brand">Marca</p>
@@ -44,7 +44,7 @@
           </li>
           <li class="articles__item">
             <input class="item__checkbox" type="checkbox">
-            <span class="item__counter">1</span>
+            <input class="item__counter" type="number">
             <div class="item__descrition">
               <h4 class="item__description--title">Artículo</h4>
               <p class="item__description--brand">Marca</p>
@@ -66,7 +66,7 @@
           <button class="purchase__button">Comprar ingredientes:<span class="purchase__button--total">0€</span></button>
       </div>
     </section>
-
+<div class="testing">here</div>
   </main>
 </body>
 </html>
