select all items and uncheck them

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </header>
   <nav class="menu">
     <ul class="menu__list">
-      <li class="menu__item">Seleccionar todo</li>
-      <li class="menu__item">Cancelar todo</li>
+      <li class="menu__item" onclick='selectAll()'>Seleccionar todo</li>
+      <li class="menu__item" onclick='eraseAll()'>Cancelar todo</li>
     </ul>
   </nav>
   <main>
@@ -36,7 +36,6 @@
           <button class="purchase__button">Comprar ingredientes:<span class="purchase__button--total">0€</span></button>
       </div>
     </section>
-<div class="testing">here</div>
   </main>
 </body>
 <script type="text/javascript" src="main.js"> </script>
